--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<!--
+* File: app.component.html
+* Author: Szivák Gergő
+* Copyright: 2022, Szivák Gergő
+* Group: Szoft II/N
+* Date: 2022-02-24
+* Github: https://github.com/gergosz-2000/angjarat
+* Licenc: GNU GPL
+-->
 <div class="container">
   <h1>Járat dolgozat</h1>
   <router-outlet></router-outlet>
