--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,12 @@
+<!--
+* File: login.component.html
+* Author: Szivák Gergő
+* Copyright: 2022, Szivák Gergő
+* Group: Szoft II/N
+* Date: 2022-02-24
+* Github: https://github.com/gergosz-2000/angjarat
+* Licenc: GNU GPL
+-->
 <h2>Belépés</h2>
 <form [formGroup]="loginForm" (ngSubmit)="login()">
     <div class="mb-3">
