--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,3 +1,12 @@
+<!--
+* File: register.component.html
+* Author: Szivák Gergő
+* Copyright: 2022, Szivák Gergő
+* Group: Szoft II/N
+* Date: 2022-02-24
+* Github: https://github.com/gergosz-2000/angjarat
+* Licenc: GNU GPL
+-->
 <h2>Regisztráció</h2>
 <form [formGroup]="registerForm" (ngSubmit)="register()">
     <div class="mb-3">
