--- a/src/app/vehicles/vehicles.component.html
+++ b/src/app/vehicles/vehicles.component.html
@@ -1,3 +1,12 @@
+<!--
+* File: vehicles.component.html
+* Author: Szivák Gergő
+* Copyright: 2022, Szivák Gergő
+* Group: Szoft II/N
+* Date: 2022-02-24
+* Github: https://github.com/gergosz-2000/angjarat
+* Licenc: GNU GPL
+-->
 <h2>Új jármű</h2>
 <form [formGroup]="newvehicleForm" (ngSubmit)="newvehicle()">
     <div class="mb-3">
