dolgozat kész, minden működik

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,13 +1,13 @@
 <h1>Autók</h1>
-<!-- <div class="input-group mb-3">
+<div class="input-group mb-3">
 <table class="table">
     <thead>
       <tr>
-        <th scope="col">plate</th>
-        <th scope="col">brand</th>
-        <th scope="col">year</th>
-        <th scope="col">price</th>
-        <th scope="col">sold</th>
+        <th scope="col">Rendszám</th>
+        <th scope="col">Márka</th>
+        <th scope="col">Év</th>
+        <th scope="col">Ár</th>
+        <th scope="col">Eladva</th>
       </tr>
     </thead>
     <tbody>
@@ -19,4 +19,4 @@
             <td>{{vehicle.sold}}</td>
           </tr>
     </tbody>
-  </table> -->
+  </table>
