--- a/src/app/vehicles/vehicles.component.html
+++ b/src/app/vehicles/vehicles.component.html
@@ -43,6 +43,6 @@
     <button type="submit" class="btn btn-primary">Hozzáad</button>
 </form>
 
-<button (click)="logout()" class="btn btn-success">Kijelentkezés</button>
-
-
+<div class="mb-3 mt-2">  
+      <button (click)="logout()" class="btn btn-success">Kijelentkezés</button>
+</div>
