kimaradt fejrész pótolva

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,20 @@
 * Github: https://github.com/gergosz-2000/angjarat
 * Licenc: GNU GPL
 -->
+<div class="nav nav-tabs justify-content-center">
+  <div class="nav-item">
+      <a href="/main" class="nav-link">Autók</a>
+  </div>
+  <div class="nav-item">
+      <a href="/vehicles" class="nav-link">Új autó</a>
+  </div>
+  <div class="nav-item">
+       <a href="/login" class="nav-link">Belépés</a>
+  </div>
+  <div class="nav-item">
+      <a href="/register" class="nav-link">Regisztráció</a>
+   </div>
+</div>
 <div class="container">
   <h1>Járat dolgozat</h1>
   <router-outlet></router-outlet>
